# tasks_api_rs_actions

./: .env  .gitignore  Cargo.toml  README.md  perms.sh  sqlx-data.json
.github/workflows/: deploy.yml
migrations/: 20210703021659_init.sql
src/: errors.rs  handlers.rs  main.rs  model.rs  tests.rs
