[package]
name = "tasks_api_rs"
version = "0.1.0"
authors = ["Euan Mendoza <bebopbamf@effectfree.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-cors = "0.5.4"
sqlx = { version = "0.5.5", features = [ "runtime-async-std-rustls", "postgres", "macros", "offline" ] }
serde = "1.0.126"
anyhow = "1.0.41"
derive_more = "0.99.14"
log = "0.4.14"
env_logger = "0.8.4"
dotenv = "0.15.0"

[dev-dependencies]
async-std = { version = "1.9.0", features = [ "attributes" ] }
